@@ -157,6 +157,9 @@
           <version>${maven.compiler.plugin.version}</version>
           <configuration>
             <release>21</release>
+            <compilerArgs>
+              <arg>--enable-preview</arg>
+            </compilerArgs>
             <annotationProcessorPaths>
               <path>
                 <groupId>io.avaje</groupId>
@@ -176,7 +179,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven.surefire.plugin.version}</version>
           <configuration>
-             <argLine>${argLine} ${jvm.args.for.tests}</argLine>
+             <argLine>${surefire.argLine} ${jvm.args.for.tests}</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -184,7 +187,7 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>${maven.failsafe.plugin.version}</version>
           <configuration>
-             <argLine>${argLine} ${jvm.args.for.tests}</argLine>
+             <argLine>${failsafe.argLine} ${jvm.args.for.tests}</argLine>
           </configuration>
           <executions>
             <execution>
@@ -201,35 +204,51 @@
           <version>${jacoco-maven-plugin.version}</version>
           <executions>
             <execution>
-              <id>prepare-agent</id>
+              <id>prepare-agent-ut</id>
               <goals>
                 <goal>prepare-agent</goal>
               </goals>
+              <configuration>
+                <destFile>${project.build.directory}/jacoco-ut.exec</destFile>
+                <propertyName>surefire.argLine</propertyName>
+              </configuration>
             </execution>
             <execution>
-              <id>report</id>
-              <phase>test</phase>
-              <goals>
-                <goal>report</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>prepare-agent-integration</id>
+              <id>prepare-agent-it</id>
               <goals>
                 <goal>prepare-agent-integration</goal>
               </goals>
               <configuration>
                 <destFile>${project.build.directory}/jacoco-it.exec</destFile>
+                <propertyName>failsafe.argLine</propertyName>
               </configuration>
             </execution>
             <execution>
-              <id>report-integration</id>
-              <phase>post-integration-test</phase>
+              <id>merge-reports</id>
+              <phase>verify</phase>
               <goals>
-                <goal>report-integration</goal>
+                <goal>merge</goal>
               </goals>
               <configuration>
-                <dataFile>${project.build.directory}/jacoco-it.exec</dataFile>
+                <destFile>${project.build.directory}/jacoco.exec</destFile>
+                <fileSets>
+                  <fileSet>
+                    <directory>${project.build.directory}</directory>
+                    <includes>
+                      <include>*.exec</include>
+                    </includes>
+                  </fileSet>
+                </fileSets>
+              </configuration>
+            </execution>
+            <execution>
+              <id>report</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+              <configuration>
+                <dataFile>${project.build.directory}/jacoco.exec</dataFile>
               </configuration>
             </execution>
           </executions>
